--- a/sample/src/main/res/layout/activity_ganalytics.xml
+++ b/sample/src/main/res/layout/activity_ganalytics.xml
@@ -8,6 +8,7 @@
     tools:context="com.github.programmerr47.ganalyticssample.GanalyticsActivity">
 
     <TextView
+        android:id="@+id/tv_greetings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello Ganalytics!"
